--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </script>
 
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Shehriyar Qureshi | Web Full Stack Engineer</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
