--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,31 @@
   </script>
 
   <meta charset="utf-8">
-  <title>Shehriyar Qureshi | Web Full Stack Engineer</title>
+  <title>Shehriyar Qureshi</title>
   <base href="/">
+
+
+  <!-- Meta tags -->
+  <meta name="twitter:title" content="Shehriyar Qureshi">
+  <meta name="twitter:site" content="@thatdevsherry">
+  <meta name="twitter:creator" content="@thatdevsherry">
+  <meta name="twitter:description"
+    content="Software Engineer & Entreprenuer. I build businesses and grow existing through software">
+  <meta name="twitter:image"
+    content="https://scontent.fisb6-1.fna.fbcdn.net/v/t1.0-9/74569609_107964270646388_7334259117277577216_n.jpg?_nc_cat=103&_nc_oc=AQnFqzoMFStbImAMhsj5OndwAvNFBQbl4t6vVXHxX8ISCe92FRLXAYVzSM4EMBUm-h0&_nc_ht=scontent.fisb6-1.fna&oh=8b64eb7e4fb9ca9ee492ce4ed2836418&oe=5E5017FF">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <meta name="og:title" content="Shehriyar Qureshi">
+  <meta name="og:description"
+    content="Software Engineer & Entreprenuer. I build businesses and grow existing through software">
+  <meta name="og:image"
+    content="https://scontent.fisb6-1.fna.fbcdn.net/v/t1.0-9/74569609_107964270646388_7334259117277577216_n.jpg?_nc_cat=103&_nc_oc=AQnFqzoMFStbImAMhsj5OndwAvNFBQbl4t6vVXHxX8ISCe92FRLXAYVzSM4EMBUm-h0&_nc_ht=scontent.fisb6-1.fna&oh=8b64eb7e4fb9ca9ee492ce4ed2836418&oe=5E5017FF">
+  <meta name="og:url" content="https://www.shehriyarqureshi.com">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-
-  <!-- Load TPLMaps JS API -->
-  <script
-    src="https://api.tplmaps.com/js-api-v2/assets/tplmaps.js?api_key=$2a$10$lGI0hMKYSmMwbBRvn32AOuWdQ4Fa6HLuxFByEx0ocHWrRR7LVqbhi"></script>
-
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
