--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:creator" content="@thatdevsherry">
   <meta name="twitter:description"
     content="Software Engineer & Entreprenuer. I build businesses and grow existing through software">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
 
   <meta name="og:title" content="Shehriyar Qureshi">
   <meta name="og:description"
