--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,12 @@
   <meta name="twitter:site" content="@thatdevsherry">
   <meta name="twitter:creator" content="@thatdevsherry">
   <meta name="twitter:description"
-    content="Software Engineer & Entreprenuer. I build businesses and grow existing through software">
+    content="Software Engineer & Entrepreneur. I build businesses and grow existing through software">
   <meta name="twitter:card" content="summary">
 
   <meta name="og:title" content="Shehriyar Qureshi">
   <meta name="og:description"
-    content="Software Engineer & Entreprenuer. I build businesses and grow existing through software">
+    content="Software Engineer & Entrepreneur. I build businesses and grow existing through software">
   <meta name="og:image"
     content="https://scontent.fisb6-1.fna.fbcdn.net/v/t1.0-9/74569609_107964270646388_7334259117277577216_n.jpg?_nc_cat=103&_nc_oc=AQnFqzoMFStbImAMhsj5OndwAvNFBQbl4t6vVXHxX8ISCe92FRLXAYVzSM4EMBUm-h0&_nc_ht=scontent.fisb6-1.fna&oh=8b64eb7e4fb9ca9ee492ce4ed2836418&oe=5E5017FF">
   <meta name="og:url" content="https://www.shehriyarqureshi.com">
