--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
   <meta name="twitter:title" content="Shehriyar Qureshi">
   <meta name="twitter:site" content="@thatdevsherry">
   <meta name="twitter:creator" content="@thatdevsherry">
+  <meta name="twitter:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg">
   <meta name="twitter:description"
     content="Software Engineer & Entrepreneur. I build businesses and grow existing through software">
   <meta name="twitter:card" content="summary">
@@ -29,7 +30,7 @@
   <meta name="og:description"
     content="Software Engineer & Entrepreneur. I build businesses and grow existing through software">
   <meta name="og:image"
-    content="https://scontent.fisb6-1.fna.fbcdn.net/v/t1.0-9/74569609_107964270646388_7334259117277577216_n.jpg?_nc_cat=103&_nc_oc=AQnFqzoMFStbImAMhsj5OndwAvNFBQbl4t6vVXHxX8ISCe92FRLXAYVzSM4EMBUm-h0&_nc_ht=scontent.fisb6-1.fna&oh=8b64eb7e4fb9ca9ee492ce4ed2836418&oe=5E5017FF">
+    content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg">
   <meta name="og:url" content="https://www.shehriyarqureshi.com">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
