use large summary for tweakter

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <meta name="twitter:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg">
   <meta name="twitter:description"
     content="Software Engineer & Entrepreneur. I build businesses and grow existing through software">
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
 
   <meta name="og:title" content="Shehriyar Qureshi">
   <meta name="og:description"
