add description meta tag and update tag contents

--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,13 @@
   <meta name="twitter:creator" content="@thatdevsherry">
   <meta name="twitter:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg">
   <meta name="twitter:description"
-    content="Software Engineer & Entrepreneur. I build businesses and grow existing through software.">
+    content="Self taught Software Engineer & Entrepreneur. I build businesses and grow existing ones through software.">
   <meta name="twitter:card" content="summary_large_image">
 
   <meta name="og:title" content="Shehriyar Qureshi">
   <meta name="og:description"
-    content="Software Engineer & Entrepreneur. I build businesses and grow existing through software.">
-  <meta name="og:image"
-    content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg">
+    content="Self taught Software Engineer & Entrepreneur. I build businesses and grow existing ones through software.">
+  <meta name="og:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg">
   <meta name="og:url" content="https://www.shehriyarqureshi.com">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
