use more open sans font weights

--- a/src/index.html
+++ b/src/index.html
@@ -1,81 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async=""
+      src="https://www.googletagmanager.com/gtag/js?id=UA-131430224-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131430224-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+      gtag("config", "UA-131430224-1");
+    </script>
+    <script
+      id="fiverr-seller-widget-script-b305175b-d93c-4bb2-bc44-f8bbedf5f13b"
+      src="https://widgets.fiverr.com/api/v1/seller/shehriyarq?widget_id=b305175b-d93c-4bb2-bc44-f8bbedf5f13b"
+      data-config='{"category_name":"Programming \u0026 Tech"}'
+      async="true"
+      defer="true"
+    ></script>
 
-    gtag('config', 'UA-131430224-1');
-  </script>
-  <script id='fiverr-seller-widget-script-b305175b-d93c-4bb2-bc44-f8bbedf5f13b'
-    src='https://widgets.fiverr.com/api/v1/seller/shehriyarq?widget_id=b305175b-d93c-4bb2-bc44-f8bbedf5f13b'
-    data-config='{"category_name":"Programming \u0026 Tech"}' async='true' defer='true'></script>
+    <meta charset="utf-8" />
+    <title>Shehriyar Qureshi</title>
+    <base href="/" />
 
+    <!-- Meta tags -->
+    <meta name="twitter:title" content="Shehriyar Qureshi" />
+    <meta name="twitter:site" content="@thatdevsherry" />
+    <meta name="twitter:creator" content="@thatdevsherry" />
+    <meta
+      name="twitter:image"
+      content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg"
+    />
+    <meta
+      name="twitter:description"
+      content="Self taught Software Engineer & Entrepreneur. I build businesses and grow existing ones through software."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
 
-  <meta charset="utf-8">
-  <title>Shehriyar Qureshi</title>
-  <base href="/">
+    <meta name="og:title" content="Shehriyar Qureshi" />
+    <meta
+      name="og:description"
+      content="Self taught Software Engineer & Entrepreneur. I build businesses and grow existing ones through software."
+    />
+    <meta
+      name="og:image"
+      content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg"
+    />
+    <meta name="og:url" content="https://www.shehriyarqureshi.com" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
 
-  <!-- Meta tags -->
-  <meta name="twitter:title" content="Shehriyar Qureshi">
-  <meta name="twitter:site" content="@thatdevsherry">
-  <meta name="twitter:creator" content="@thatdevsherry">
-  <meta name="twitter:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg">
-  <meta name="twitter:description"
-    content="Self taught Software Engineer & Entrepreneur. I build businesses and grow existing ones through software.">
-  <meta name="twitter:card" content="summary_large_image">
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  <meta name="og:title" content="Shehriyar Qureshi">
-  <meta name="og:description"
-    content="Self taught Software Engineer & Entrepreneur. I build businesses and grow existing ones through software.">
-  <meta name="og:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg">
-  <meta name="og:url" content="https://www.shehriyarqureshi.com">
+  <body>
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          xfbml: true,
+          version: "v5.0",
+        });
+      };
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <!-- Load Facebook SDK for JavaScript -->
-  <div id="fb-root"></div>
-  <script>
-    window.fbAsyncInit = function () {
-      FB.init({
-        xfbml: true,
-        version: 'v5.0'
-      });
-    };
-
-    (function (d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
-  <!-- Your customer chat code -->
-  <div class="fb-customerchat" attribution=setup_tool page_id="107963717313110" theme_color="#6C63FF"
-    logged_in_greeting="Hi there! Drop me a message if you want to know about anything :D"
-    logged_out_greeting="Hi there! Drop me a message if you want to know about anything :D">
-  </div>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
-
+    <!-- Your customer chat code -->
+    <div
+      class="fb-customerchat"
+      attribution="setup_tool"
+      page_id="107963717313110"
+      theme_color="#6C63FF"
+      logged_in_greeting="Hi there! Drop me a message if you want to know about anything :D"
+      logged_out_greeting="Hi there! Drop me a message if you want to know about anything :D"
+    ></div>
+    <app-root></app-root>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
+  </body>
 </html>
