--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,16 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async=""
-      src="https://www.googletagmanager.com/gtag/js?id=UA-131430224-1"
-    ></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131430224-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
+      gtag('js', new Date());
 
-      gtag("config", "UA-131430224-1");
+      gtag('config', 'UA-131430224-1');
     </script>
-    <script
-      id="fiverr-seller-widget-script-b305175b-d93c-4bb2-bc44-f8bbedf5f13b"
-      src="https://widgets.fiverr.com/api/v1/seller/shehriyarq?widget_id=b305175b-d93c-4bb2-bc44-f8bbedf5f13b"
-      data-config='{"category_name":"Programming \u0026 Tech"}'
-      async="true"
-      defer="true"
-    ></script>
 
     <meta charset="utf-8" />
     <title>Shehriyar Qureshi</title>
@@ -31,25 +21,15 @@
     <meta name="twitter:title" content="Shehriyar Qureshi" />
     <meta name="twitter:site" content="@thatdevsherry" />
     <meta name="twitter:creator" content="@thatdevsherry" />
-    <meta
-      name="twitter:image"
-      content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg"
-    />
-    <meta
-      name="twitter:description"
-      content="Self taught Software Engineer & Entrepreneur. I build businesses and grow existing ones through software."
-    />
+    <!-- TODO: Add Twitter image -->
+    <!-- <meta name="twitter:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg" /> -->
+    <meta name="twitter:description" content="Software Engineer | Digital Creator" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta name="og:title" content="Shehriyar Qureshi" />
-    <meta
-      name="og:description"
-      content="Self taught Software Engineer & Entrepreneur. I build businesses and grow existing ones through software."
-    />
-    <meta
-      name="og:image"
-      content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg"
-    />
+    <meta name="og:description" content="Software Engineer | Digital Creator" />
+    <!-- TODO: Add Twitter image -->
+    <!-- <meta name="og:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg" /> -->
     <meta name="og:url" content="https://www.shehriyarqureshi.com" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -58,33 +38,11 @@
     <meta name="theme-color" content="#1976d2" />
 
     <!-- Fonts -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
-      rel="stylesheet"
-    />
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
   </head>
 
   <body>
     <app-root></app-root>
-    <noscript
-      >Please enable JavaScript to continue using this application.</noscript
-    >
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
