update github username and old domain

--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,15 @@
     <meta name="twitter:site" content="@thatdevsherry" />
     <meta name="twitter:creator" content="@thatdevsherry" />
     <!-- TODO: Add Twitter image -->
-    <!-- <meta name="twitter:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg" /> -->
+    <!-- <meta name="twitter:image" content="https://thatdevsherry.com/assets/images/twitter_image.jpg" /> -->
     <meta name="twitter:description" content="Software Engineer | Digital Creator" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta name="og:title" content="Shehriyar Qureshi" />
     <meta name="og:description" content="Software Engineer | Digital Creator" />
     <!-- TODO: Add Twitter image -->
-    <!-- <meta name="og:image" content="https://shehriyarqureshi.com/assets/images/twitter_image.jpg" /> -->
-    <meta name="og:url" content="https://www.shehriyarqureshi.com" />
+    <!-- <meta name="og:image" content="https://thatdevsherry.com/assets/images/twitter_image.jpg" /> -->
+    <meta name="og:url" content="https://www.thatdevsherry.com" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
