defer google fonts

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,11 @@
     <meta name="theme-color" content="#1976d2" />
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
+    <link
+      defer
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
