inline html,body css

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131430224-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -17,25 +16,29 @@
     <title>Shehriyar Qureshi</title>
     <base href="/" />
 
-    <!-- Meta tags -->
     <meta name="twitter:title" content="Shehriyar Qureshi" />
     <meta name="twitter:site" content="@thatdevsherry" />
     <meta name="twitter:creator" content="@thatdevsherry" />
-    <!-- TODO: Add Twitter image -->
-    <!-- <meta name="twitter:image" content="https://thatdevsherry.com/assets/images/twitter_image.jpg" /> -->
     <meta name="twitter:description" content="Software Engineer | Digital Creator" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta name="og:title" content="Shehriyar Qureshi" />
     <meta name="og:description" content="Software Engineer | Digital Creator" />
-    <!-- TODO: Add Twitter image -->
-    <!-- <meta name="og:image" content="https://thatdevsherry.com/assets/images/twitter_image.jpg" /> -->
     <meta name="og:url" content="https://www.thatdevsherry.com" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1976d2" />
+    <style>
+      body,
+      html {
+        height: 100%;
+        margin: 0 auto;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 62.5%;
+      }
+    </style>
   </head>
 
   <body>
