add self-referencing canonical url

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
         font-size: 62.5%;
       }
     </style>
+
+    <link rel="canonical" href="https://www.thatdevsherry.com" />
   </head>
 
   <body>
